# ACE-Step-DAW

./: .agent-session-id  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  agent-prompt.txt  index.html  package-lock.json  package.json  playwright.config.ts  run-agent.sh  rust-toolchain.toml  verify-screenshots.mjs  vite.config.ts  vitest.config.ts
.claude/: daw-system-prompt.md  launch.json  settings.json
.claude/agents/: do-todo.md  product-manager.md  refactorer.md  researcher.md  reviewer.md  tester.md
.claude/commands/: full-cycle.md  research-cycle.md  spec-cycle.md  todo-all.md
.llm/: BLOCKERS.md  PIPELINE.md  TASK_QUEUE.md  qa-audit-issues.md  qa-plan.md  todo.md
companion/: Cargo.toml
crates/: Cargo.toml  README.md
crates/ace-dsp-core/: Cargo.toml
crates/ace-dsp-core/src/: biquad.rs  chorus.rs  delay.rs  distortion.rs  dynamics.rs  eq.rs  lfo.rs  lib.rs  limiter.rs  modulation.rs  reverb.rs  stft.rs  timestretch.rs
crates/ace-dsp-wasm/: Cargo.toml
crates/ace-dsp-wasm/src/: lib.rs
crates/ace-plugin-host/examples/: roundtrip.rs
crates/ace-plugin-host/src/: audio.rs  host.rs  lib.rs  loader.rs  midi.rs  params.rs
crates/ace-waveform-wasm/: Cargo.toml
dashboard/: server.ts
docs/: dev-process.md  integration-plan.md  release_task_lego_mapping.md
public/: engine-worklet-processor.js  site.webmanifest  vst3-worklet-processor.js  wasm-dsp-processor.js
screenshots/: VERIFICATION_REPORT.md
scripts/: build-wasm.sh  metrics.sh
server/: daw-cli-format.ts  daw-cli.ts  mcp-config.json  mcp-server.ts  vite-plugin-claude-terminal.ts
src/: index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tests/: TEST_PLAN.md  USER_TEST_GUIDE.md  setup.ts  system-test-round1.md
(+1206 files in other folders)
