[package]
name = "ace-dsp-core"
description = "Pure DSP algorithms for ACE-Step DAW — filters, dynamics, reverb, modulation"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]

[features]
default = ["std"]
std = []

[dev-dependencies]
approx = "0.5"
