[package]
name = "ace-dsp-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for ACE-Step DSP engine"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
ace-dsp-core = { path = "../ace-dsp-core" }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
