[package]
name = "ace-dsp-wasm"
description = "WASM bindings for ACE-Step DAW DSP engine — exposes ace-dsp-core to AudioWorklet"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ace-dsp-core = { path = "../ace-dsp-core" }
wasm-bindgen = "0.2"

[dependencies.js-sys]
version = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dev-dependencies]
wasm-bindgen-test = "0.3"
